--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -23,7 +23,15 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label><input type="checkbox" id="loadOnStartup"> Load on startup</label>
+                                <label><input type="checkbox" id="activateOnStartup"> Activate on startup</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                                <label><input type="checkbox" id="loadEnamDict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
                             </div>
                         </div>
                     </div>
@@ -39,7 +47,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label><input type="checkbox" id="enableAnkiConnect" checked> Enable AnkiConnect</label>
+                                <label><input type="checkbox" id="enableAnkiConnect" checked> Enable <a href="https://foosoft.net/projects/yomichan">AnkiConnect</a></label>
                             </div>
                         </div>
                     </div>
