--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -5,8 +5,12 @@
         <title></title>
         <style>
             @font-face {
-                font-family: "KanjiStrokeOrders";
-                src:         url("{{root}}/ttf/kanji-stroke-orders.ttf");
+                font-family: kanji-stroke-orders;
+                src:         url('{{root}}/ttf/kanji-stroke-orders.ttf');
+            }
+            @font-face {
+                font-family: vl-gothic-regular;
+                src:         url('{{root}}/ttf/vl-gothic-regular.ttf');
             }
         </style>
         <link rel="stylesheet" href="{{root}}/css/frame.css">
