--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -21,7 +21,7 @@
             {{/if}}
 
             {{#if kunyomi}}
-            <dt>Kunyomi</dt>
+            <dt>Kun'yomi</dt>
             <dd class="kanji-reading">
                 {{#each kunyomi}}
                 {{.}}{{#unless @last}}, {{/unless}}
@@ -30,7 +30,7 @@
             {{/if}}
 
             {{#if onyomi}}
-            <dt>Onyomi</dt>
+            <dt>On'yomi</dt>
             <dd class="kanji-reading">
                 {{#each onyomi}}
                 {{.}}{{#unless @last}}, {{/unless}}
