Updating legal docs

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Yomichan <small>for Chrome</small></h1>
+                <h1>Yomichan <small>Options</small></h1>
             </div>
 
             <h2>Options</h2>
@@ -54,24 +54,14 @@
                 </form>
             </div>
 
-            <h2>License</h2>
-            <div>
-                <p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
-                <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.</p>
-                <p>You should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</p>
+            <div style="text-align: right;">
+                <small><a href="legal.html">Software license and third-party compliance</a></small>
             </div>
-
-            <h2>Third-party Software</h2>
-            <div>
-                <p>This software uses the <a href = "http://www.famfamfam.com/lab/icons/silk/">Silk web icon set</a> created by Mark James.</p>
-                <p>Portions of this application's code and data are based on the <a href="http://www.polarcloud.com/rikaichan/">Rikaichan</a> extension developed by Jonathan Zarate.</p>
-                <p>This package uses the <a href="http://www.csse.monash.edu.au/~jwb/edict.html">EDICT</a> and <a href="http://www.csse.monash.edu.au/~jwb/kanjidic.html">KANJIDIC</a> dictionary files. These files are the property of the <a href="http://www.edrdg.org/"> Electronic Dictionary Research and Development Group</a>, and are used in conformance with the Group's <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.</p>
-            </div>
-
-            <script src="../lib/jquery-2.2.2.min.js"></script>
-            <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-            <script src="js/options.js"></script>
-            <script src="js/options-form.js"></script>
         </div>
+
+        <script src="../lib/jquery-2.2.2.min.js"></script>
+        <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+        <script src="js/options.js"></script>
+        <script src="js/options-form.js"></script>
     </body>
 </html>
