Adding link to homepage

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -55,7 +55,7 @@
             </div>
 
             <div style="text-align: right;">
-                <small><a href="legal.html">Software license and third-party compliance</a></small>
+                <small><a href="https://foosoft.net/projects/yomichan-chrome-ext">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
 
