--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -12,46 +12,54 @@
                 <h1>Yomichan <small>Options</small></h1>
             </div>
 
-            <h2>Options</h2>
-            <div>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label for="scanLength" class="control-label col-sm-2">Scan length</label>
-                        <div class="col-sm-10"><input type="number" value="20" min="1" id="scanLength" class="form-control"></div>
-                    </div>
+            <div class="options-general">
+                <h2>General</h2>
+                <div>
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label for="scanLength" class="control-label col-sm-2">Scan length</label>
+                            <div class="col-sm-10"><input type="number" value="20" min="1" id="scanLength" class="form-control"></div>
+                        </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <div class="checkbox">
-                                <label><input type="checkbox" id="activateOnStartup"> Activate on startup</label>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" id="activateOnStartup"> Activate on startup</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <div class="checkbox">
-                                <label><input type="checkbox" id="loadEnamDict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" id="loadEnamDict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <div class="checkbox">
-                                <label><input type="checkbox" id="selectMatchedText" checked> Select matched text</label>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" id="selectMatchedText" checked> Select matched text</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <div class="checkbox">
-                                <label><input type="checkbox" id="enableAnkiConnect" checked> Enable <a href="https://foosoft.net/projects/yomichan">AnkiConnect</a></label>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" id="enableAnkiConnect" checked> Enable <a href="https://foosoft.net/projects/yomichan">AnkiConnect</a></label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
+            </div>
+
+            <div class="options-anki">
+                <h2>Anki</h2>
+
+
             </div>
 
             <div style="text-align: right;">
