--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -36,7 +36,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label><input type="checkbox" id="loadEnasmict"> Load <a href="http://www.edrdg.org/enasmict/enasmict_doc.html">ENAsmICT</a> (requires restart)</label>
+                                <label><input type="checkbox" id="loadEnamdict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
                             </div>
                         </div>
                     </div>
@@ -74,14 +74,14 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label" for="ankiDeck">Deck</label>
                         <div class="col-sm-10">
-                            <select class="form-control" name="ankiDeck"></select>
+                            <select class="form-control" id="ankiDeck"></select>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label" for="ankiModel">Model</label>
                         <div class="col-sm-10">
-                            <select class="form-control" name="ankiDeck"></select>
+                            <select class="form-control" id="ankiModel"></select>
                         </div>
                     </div>
                 </div>
