--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -9,6 +9,13 @@
             .options-anki {
                 display: none;
             }
+
+            .tab-content {
+                border-bottom: 1px #ddd solid;
+                border-left:   1px #ddd solid;
+                border-right:  1px #ddd solid;
+                padding:       10px;
+            }
         </style>
     </head>
     <body>
