--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -100,7 +100,7 @@
                                         <th>Value</th>
                                     </tr>
                                 </thead>
-                                <tbody id="ankiVocabFields">
+                                <tbody class="ankiFields">
                                 </tbody>
                             </table>
                         </div>
@@ -126,7 +126,7 @@
                                         <th>Value</th>
                                     </tr>
                                 </thead>
-                                <tbody id="ankiKanjiFields">
+                                <tbody class="ankiFields">
                                 </tbody>
                             </table>
                         </div>
