--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -93,14 +93,14 @@
                                 </div>
                             </div>
 
-                            <table class="table table-bordered">
+                            <table class="table table-bordered ankiFields">
                                 <thead>
                                     <tr>
                                         <th>Field</th>
                                         <th>Value</th>
                                     </tr>
                                 </thead>
-                                <tbody class="ankiFields">
+                                <tbody>
                                 </tbody>
                             </table>
                         </div>
@@ -119,14 +119,14 @@
                                 </div>
                             </div>
 
-                            <table class="table table-bordered">
+                            <table class="table table-bordered ankiFields">
                                 <thead>
                                     <tr>
                                         <th>Field</th>
                                         <th>Value</th>
                                     </tr>
                                 </thead>
-                                <tbody class="ankiFields">
+                                <tbody>
                                 </tbody>
                             </table>
                         </div>
