--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -29,14 +29,14 @@
 
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label for="scanLength" class="control-label col-sm-2">Scan length</label>
-                        <div class="col-sm-10"><input type="number" value="20" min="1" id="scanLength" class="form-control"></div>
+                        <label for="scan-length" class="control-label col-sm-2">Scan length</label>
+                        <div class="col-sm-10"><input type="number" value="20" min="1" id="scan-length" class="form-control"></div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label class="control-label"><input type="checkbox" id="activateOnStartup"> Activate on startup</label>
+                                <label class="control-label"><input type="checkbox" id="activate-on-startup"> Activate on startup</label>
                             </div>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label class="control-label"><input type="checkbox" id="loadEnamdict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
+                                <label class="control-label"><input type="checkbox" id="load-enamdict"> Load <a href="http://www.edrdg.org/enamdict/enamdict_doc.html">ENAMDICT</a> (requires restart)</label>
                             </div>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label class="control-label"><input type="checkbox" id="selectMatchedText" checked> Select matched text</label>
+                                <label class="control-label"><input type="checkbox" id="select-matched-text" checked> Select matched text</label>
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label class="control-label"><input type="checkbox" id="enableAnkiConnect"> Enable <a href="https://foosoft.net/projects/yomichan">AnkiConnect</a></label>
+                                <label class="control-label"><input type="checkbox" id="enable-anki-connect"> Enable <a href="https://foosoft.net/projects/yomichan">AnkiConnect</a></label>
                             </div>
                         </div>
                     </div>
@@ -80,20 +80,20 @@
                     <div class="tab-content">
                         <div id="vocab" class="tab-pane fade in active">
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="ankiVocabDeck">Deck</label>
+                                <label class="col-sm-2 control-label" for="anki-vocab-deck">Deck</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control ankiDeck" id="ankiVocabDeck"></select>
+                                    <select class="form-control anki-deck" id="anki-vocab-deck"></select>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="ankiVocabModel">Model</label>
+                                <label class="col-sm-2 control-label" for="anki-vocab-model">Model</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control ankiModel" id="ankiVocabModel"></select>
+                                    <select class="form-control anki-model" id="anki-vocab-model"></select>
                                 </div>
                             </div>
 
-                            <table class="table table-bordered ankiFields">
+                            <table class="table table-bordered anki-fields">
                                 <thead>
                                     <tr>
                                         <th>Field</th>
@@ -106,16 +106,16 @@
                         </div>
                         <div id="kanji" class="tab-pane fade">
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="ankiKanjiDeck">Deck</label>
+                                <label class="col-sm-2 control-label" for="anki-kanji-deck">Deck</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control ankiDeck" id="ankiKanjiDeck"></select>
+                                    <select class="form-control anki-deck" id="anki-kanji-deck"></select>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="ankiKanjiModel">Model</label>
+                                <label class="col-sm-2 control-label" for="anki-kanji-model">Model</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control ankiModel" id="ankiKanjiModel"></select>
+                                    <select class="form-control anki-model" id="anki-kanji-model"></select>
                                 </div>
                             </div>
 
