--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
 
-                            <table class="table table-bordered ankiFields">
+                            <table class="table table-bordered anki-fields">
                                 <thead>
                                     <tr>
                                         <th>Field</th>
