--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -30,7 +30,7 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <label for="scan-length" class="control-label col-sm-2">Scan length</label>
-                        <div class="col-sm-10"><input type="number" value="20" min="1" id="scan-length" class="form-control"></div>
+                        <div class="col-sm-10"><input type="number" min="1" id="scan-length" class="form-control"></div>
                     </div>
 
                     <div class="form-group">
@@ -52,7 +52,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
-                                <label class="control-label"><input type="checkbox" id="select-matched-text" checked> Select matched text</label>
+                                <label class="control-label"><input type="checkbox" id="select-matched-text"> Select matched text</label>
                             </div>
                         </div>
                     </div>
