Display supported field tags

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -103,7 +103,10 @@
                                 <tbody>
                                 </tbody>
                             </table>
+
+                            <p>Supported field tags: <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code></p>
                         </div>
+
                         <div id="kanji" class="tab-pane fade">
                             <div class="form-group">
                                 <label class="col-sm-2 control-label" for="anki-kanji-deck">Deck</label>
@@ -129,6 +132,8 @@
                                 <tbody>
                                 </tbody>
                             </table>
+
+                            <p>Supported field tags: <code>{character}</code>, <code>{onyomi}</code>, <code>{kunyomi}</code>, <code>{glossary}</code></p>
                         </div>
                     </div>
                 </form>
