--- a/tmpl/term-list.html
+++ b/tmpl/term-list.html
@@ -1,5 +1,5 @@
 {{> header.html}}
-{{#each defs}}
+{{#each definitions}}
 {{> term.html root=../root options=../options sequence=../sequence}}
 {{/each}}
 {{> footer.html}}
