--- a/tmpl/kanji-list.html
+++ b/tmpl/kanji-list.html
@@ -1,5 +1,5 @@
 {{> header.html}}
-{{#each defs}}
+{{#each definitions}}
 {{> kanji.html root=../root options=../options sequence=../sequence}}
 {{/each}}
 {{> footer.html}}
