--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -75,16 +75,33 @@
             <div class="options-anki">
                 <h2>Anki</h2>
 
-                <div class="alert alert-danger error-dlg error-dlg-connection"><strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running?</div>
-                <div class="alert alert-warning error-dlg error-dlg-version"><strong>Unsupported version</strong>: the installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release.</div>
+                <div class="alert alert-danger error-dlg error-dlg-connection">
+                    <strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running?
+                </div>
+                <div class="alert alert-warning error-dlg error-dlg-version">
+                    <strong>Unsupported version</strong>: the installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release.
+                </div>
 
-                <form class="form-horizontal">
-                    <ul class="nav nav-tabs">
+                <form class="form-horizontal options-anki-controls">
+                    <div class="form-group">
+                        <label for="anki-card-tags" class="control-label col-sm-2">Card tags</label>
+                        <div class="col-sm-10"><input type="text" id="anki-card-tags" class="form-control"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                                <label class="control-label"><input type="checkbox" id="anki-html-cards"> Render cards using <a href="https://en.wikipedia.org/wiki/HTML">HTML</a></label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <ul class="nav nav-tabs col-sm-offset-2 col-sm-10">
                         <li class="active"><a href="#vocab" data-toggle="tab">Vocabulary</a></li>
                         <li><a href="#kanji" data-toggle="tab">Kanji</a></li>
                     </ul>
 
-                    <div class="tab-content">
+                    <div class="tab-content col-sm-offset-2 col-sm-10">
                         <div id="vocab" class="tab-pane fade in active">
                             <div class="form-group">
                                 <label class="col-sm-2 control-label" for="anki-vocab-deck">Deck</label>
