--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+    <script src="js/polyfill-gecko.js"></script>
     <script src="../lib/handlebars.min.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/dictionary.js"></script>
