--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -163,6 +163,7 @@
 
         <script src="../lib/jquery-2.2.2.min.js"></script>
         <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+        <script src="js/polyfill-gecko.js"></script>
         <script src="js/options.js"></script>
         <script src="js/options-form.js"></script>
     </body>
