Updating options page for smaller layout

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -24,12 +24,8 @@
     </head>
     <body>
         <div class="container">
-            <div class="page-header">
-                <h1>Yomichan <small>Options</small></h1>
-            </div>
-
             <div class="options-general">
-                <h2>General</h2>
+                <h3>General Options</h3>
 
                 <form class="form-horizontal">
                     <div class="form-group">
@@ -73,7 +69,7 @@
             </div>
 
             <div class="options-anki">
-                <h2>Anki</h2>
+                <h3>Anki Options</h3>
 
                 <div class="alert alert-danger error-dlg error-dlg-connection">
                     <strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running?
