Support additional replacement fields

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -116,7 +116,7 @@
                                 </tbody>
                             </table>
 
-                            <p>Supported field tags: <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code></p>
+                            <p>Allowed tags: <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{tags}</code></p>
                         </div>
 
                         <div id="kanji" class="tab-pane fade">
@@ -145,7 +145,7 @@
                                 </tbody>
                             </table>
 
-                            <p>Supported field tags: <code>{character}</code>, <code>{onyomi}</code>, <code>{kunyomi}</code>, <code>{glossary}</code></p>
+                            <p>Allowed tags: <code>{character}</code>, <code>{onyomi}</code>, <code>{kunyomi}</code>, <code>{glossary}</code>, <code>{glossary-list}</code></p>
                         </div>
                     </div>
                 </form>
