Add option to enable and disable audio playback

--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -1,7 +1,9 @@
 <div class="term-definition">
     {{#with options}}
     <div class="action-bar" data-sequence="{{../sequence}}">
+        {{#if enableAudioPlayback}}
         <a href="#" title="Pronounce" class="action-pronounce" data-index="{{@index}}"><img src="{{../root}}/img/pronounce.png"></a>
+        {{/if}}
         {{#if enableAnkiConnect}}
         <a href="#" title="Add term as expression" class="action-add-note disabled" data-mode="vocab_kanji" data-index="{{@index}}"><img src="{{../root}}/img/add_vocab_kanji.png"></a>
         <a href="#" title="Add term as reading" class="action-add-note disabled" data-mode="vocab_kana" data-index="{{@index}}"><img src="{{../root}}/img/add_vocab_kana.png"></a>
