--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -60,6 +60,14 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <div class="checkbox">
+                                <label class="control-label"><input type="checkbox" id="enable-audio-playback"> Enable audio playback</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
                                 <label class="control-label"><input type="checkbox" id="enable-anki-connect"> Enable <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a></label>
                             </div>
                         </div>
