--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -124,7 +124,7 @@
                                 </tbody>
                             </table>
 
-                            <p>Allowed tags: <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{tags}</code></p>
+                            <p>Allowed tags:  <code>{audio}</code>, <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{tags}</code></p>
                         </div>
 
                         <div id="kanji" class="tab-pane fade">
