Better error message

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -83,7 +83,7 @@
                     <strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running?
                 </div>
                 <div class="alert alert-warning error-dlg error-dlg-version">
-                    <strong>Unsupported version</strong>: the installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release.
+                    <strong>Unsupported version</strong>: the installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release; please update it.
                 </div>
 
                 <form class="form-horizontal options-anki-controls">
