--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -80,7 +80,7 @@
                 <h3>Anki Options</h3>
 
                 <div class="alert alert-danger error-dlg error-dlg-connection">
-                    <strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running?
+                    <strong>Unable to connect</strong>: is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running? This software is required for Anki-related features.
                 </div>
                 <div class="alert alert-warning error-dlg error-dlg-version">
                     <strong>Unsupported version</strong>: the installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release; please update it.
