Pronounce => Play Audio

--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -2,7 +2,7 @@
     {{#with options}}
     <div class="action-bar" data-sequence="{{../sequence}}">
         {{#if enableAudioPlayback}}
-        <a href="#" title="Pronounce" class="action-pronounce" data-index="{{@index}}"><img src="{{../root}}/img/pronounce.png"></a>
+        <a href="#" title="Play audio" class="action-play-audio" data-index="{{@index}}"><img src="{{../root}}/img/play_audio.png"></a>
         {{/if}}
         {{#if enableAnkiConnect}}
         <a href="#" title="Add term as expression" class="action-add-note disabled" data-mode="vocab_kanji" data-index="{{@index}}"><img src="{{../root}}/img/add_vocab_kanji.png"></a>
