Formatting legal page

--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -8,11 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="page-header">
-                <h1>Yomichan <small>Legal</small></h1>
-            </div>
-
-            <h2>License</h2>
+            <h3>Yomichan License</h3>
 <pre>
 Copyright (C) 2016  Alex Yatskov
 
@@ -29,8 +25,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
 </pre>
-            <h2>Third-party software components</h2>
-            <h3>VLGothic</h3>
+            <h3>VLGothic License</h3>
 <pre>
 Copyright (c) 1990-2003 Wada Laboratory, the University of Tokyo.
 Copyright (c) 2003-2004 Electronic Font Open Laboratory (/efont/).
@@ -63,7 +58,7 @@ WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </pre>
-            <h3>EDRDG</h3>
+            <h3>EDRDG License</h3>
 <pre>
 This package uses the <a href="http://www.csse.monash.edu.au/~jwb/edict.html">EDICT</a> and <a href="http://www.csse.monash.edu.au/~jwb/kanjidic.html">KANJIDIC</a> dictionary files. These files are
 the property of the <a href="http://www.edrdg.org/"> Electronic Dictionary Research and Development Group</a>,
