Updating options page to include new tags

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -124,7 +124,7 @@
                                 </tbody>
                             </table>
 
-                            <p>Allowed tags:  <code>{audio}</code>, <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{tags}</code></p>
+                            <p>Allowed tags:  <code>{audio}</code>, <code>{expression}</code>, <code>{reading}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{tags}</code>, <code>{url}</code>, <code>{sentence}</code></p>
                         </div>
 
                         <div id="kanji" class="tab-pane fade">
@@ -153,7 +153,7 @@
                                 </tbody>
                             </table>
 
-                            <p>Allowed tags: <code>{character}</code>, <code>{onyomi}</code>, <code>{kunyomi}</code>, <code>{glossary}</code>, <code>{glossary-list}</code></p>
+                            <p>Allowed tags: <code>{character}</code>, <code>{onyomi}</code>, <code>{kunyomi}</code>, <code>{glossary}</code>, <code>{glossary-list}</code>, <code>{url}</code></p>
                         </div>
                     </div>
                 </form>
