--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -12,9 +12,9 @@
 
             .tab-content {
                 border-bottom: 1px #ddd solid;
-                border-left:   1px #ddd solid;
-                border-right:  1px #ddd solid;
-                padding:       10px;
+                border-left: 1px #ddd solid;
+                border-right: 1px #ddd solid;
+                padding: 10px;
             }
 
             .error-dlg {
@@ -90,6 +90,11 @@
                     <div class="form-group">
                         <label for="anki-card-tags" class="control-label col-sm-2">Card tags</label>
                         <div class="col-sm-10"><input type="text" id="anki-card-tags" class="form-control"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="sentence-extent" class="control-label col-sm-2">Sentence extent</label>
+                        <div class="col-sm-10"><input type="number" min="1" id="sentence-extent" class="form-control"></div>
                     </div>
 
                     <ul class="nav nav-tabs col-sm-offset-2 col-sm-10">
