--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -98,23 +98,23 @@
                     </div>
 
                     <ul class="nav nav-tabs col-sm-offset-2 col-sm-10">
-                        <li class="active"><a href="#vocab" data-toggle="tab">Vocabulary</a></li>
+                        <li class="active"><a href="#term" data-toggle="tab">Terms</a></li>
                         <li><a href="#kanji" data-toggle="tab">Kanji</a></li>
                     </ul>
 
                     <div class="tab-content col-sm-offset-2 col-sm-10">
-                        <div id="vocab" class="tab-pane fade in active">
+                        <div id="term" class="tab-pane fade in active">
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="anki-vocab-deck">Deck</label>
+                                <label class="col-sm-2 control-label" for="anki-term-deck">Deck</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control anki-deck" id="anki-vocab-deck"></select>
+                                    <select class="form-control anki-deck" id="anki-term-deck"></select>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-2 control-label" for="anki-vocab-model">Model</label>
+                                <label class="col-sm-2 control-label" for="anki-term-model">Model</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control anki-model" id="anki-vocab-model"></select>
+                                    <select class="form-control anki-model" id="anki-term-model"></select>
                                 </div>
                             </div>
 
