--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -5,8 +5,8 @@
         <a href="#" title="Play audio" class="action-play-audio" data-index="{{@index}}"><img src="{{../root}}/img/play_audio.png"></a>
         {{/if}}
         {{#if enableAnkiConnect}}
-        <a href="#" title="Add vocabulary as expression" class="action-add-note disabled" data-mode="vocab_kanji" data-index="{{@index}}"><img src="{{../root}}/img/add_vocab_kanji.png"></a>
-        <a href="#" title="Add vocabulary as reading" class="action-add-note disabled" data-mode="vocab_kana" data-index="{{@index}}"><img src="{{../root}}/img/add_vocab_kana.png"></a>
+        <a href="#" title="Add term as expression" class="action-add-note disabled" data-mode="term_kanji" data-index="{{@index}}"><img src="{{../root}}/img/add_term_kanji.png"></a>
+        <a href="#" title="Add term as reading" class="action-add-note disabled" data-mode="term_kana" data-index="{{@index}}"><img src="{{../root}}/img/add_term_kana.png"></a>
         {{/if}}
     </div>
     {{/with}}
