--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -17,7 +17,7 @@
 
             <ol>
                 <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
-                <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan <a href="options.html">options page</a>.
+                <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan <a href="options.html">options page</a>.</li>
                 <li>Hold down <kbd>Shift</kbd> or the middle mouse button as you move your cursor over text to see definitions.</li>
                 <li>Resize the definition window by dragging the bottom-left corner inwards or outwards.</li>
                 <li>Click on Kanji in the definition window to view additional information about that character.</li>
