--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Yomichan Usage Guide</title>
+        <title>Yomichan Guide</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
     </head>
@@ -10,14 +10,14 @@
         <div class="container">
 
             <div class="page-header">
-                <h1>Yomichan Usage Guide</h1>
+                <h1>Yomichan Guide</h1>
             </div>
 
             <p>This is a minimal guide to get you started with Yomichan. For complete documentation, visit the <a href="https://foosoft.net/projects/yomichan-chrome/">official homepage</a>.</p>
 
             <ol>
                 <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
-                <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan <a href="options.html">options page</a>.</li>
+                <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan options page.</li>
                 <li>Hold down <kbd>Shift</kbd> or the middle mouse button as you move your cursor over text to see definitions.</li>
                 <li>Resize the definition window by dragging the bottom-left corner inwards or outwards.</li>
                 <li>Click on Kanji in the definition window to view additional information about that character.</li>
