--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -171,7 +171,7 @@
             </div>
 
             <div style="text-align: right;">
-                <small><a href="https://foosoft.net/projects/yomichan-chrome">Homepage</a> &bull; <a href="guide.html">Guide</a> &bull; <a href="legal.html">Legal</a></small>
+                <small><a href="https://foosoft.net/projects/yomichan-chrome">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
 
