--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <body>
     <script src="../lib/handlebars.min.js"></script>
+    <script src="../lib/dexie.min.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/dictionary.js"></script>
     <script src="js/deinflector.js"></script>
