--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -4,6 +4,7 @@
     <script src="../lib/handlebars.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
     <script src="js/templates.js"></script>
+    <script src="js/util.js"></script>
     <script src="js/dictionary.js"></script>
     <script src="js/deinflector.js"></script>
     <script src="js/translator.js"></script>
