--- a/ext/bg/import.html
+++ b/ext/bg/import.html
@@ -15,7 +15,7 @@
             <p>Importing dictionary data, this can take a while...</p>
 
             <div class="progress">
-                <div class="progress-bar" style="width: 0%" />
+                <div class="progress-bar progress-bar-striped" style="width: 0%">0%</div>
             </div>
         </div>
 
